proper filling when using Qt::TexturePattern

fix for using both Qt::OpaqueMode and
Qt::TexturePatter for filling

Task-number: QTBUG-19202
Change-Id: Ia92363cacaa51140fe78b542d9768aead81868ff
Reviewed-by: Kim M. Kalland <kim.kalland@nokia.com>

cregit: b0a6c521ab85ef13ffd39e6502d6ab45dda25d7f https://github.com/qt/qtbase/commit/b0a6c521ab85ef13ffd39e6502d6ab45dda25d7f